stack.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "First week practical session"
Resources:
  launchConfigs:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      LaunchConfigurationName: dummyLaunch
      ImageId: ami-003d8924a33dc0fd7
      InstanceType: t2.nano
      KeyName: syntetich
      InstanceMonitoring: false
      SecurityGroups:
        - !Ref security
      UserData:
        Fn::Base64:
          !Sub |
          #!/bin/bash -xe
          sudo yum install -y java-1.8.0-openjdk.x86_64
          sudo /usr/sbin/alternatives --set java /usr/lib/jvm/jre-1.8.0-openjdk.x86_64/bin/java
          sudo /usr/sbin/alternatives --set javac /usr/lib/jvm/jre-1.8.0-openjdk.x86_64/bin/javac
          sudo yum remove java-1.7

  scaling:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: AWSGroupLohica
      AvailabilityZones:
        Fn::GetAZs:
          Ref: "AWS::Region"
      HealthCheckGracePeriod: 300
      MinSize: 2
      MaxSize: 2
      LaunchConfigurationName: !Ref launchConfigs
  security:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: external_sg
      GroupDescription: Allow ssh
      VpcId: vpc-cbe9acb3
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

Outputs:
  InstanceID:
    Description: autoscaling group
    Value: !Ref scaling
